@@ -25,6 +25,7 @@ Trunk (unreleased changes)
     
   IMPROVEMENTS
     
+    HAMA-78: Separate Interface and Implementation for HamaAdmin (edwardyoon)
     HAMA-76: Remove load() since it duplicated with constructor (edwardyoon)
     HAMA-74: set the number of map/reduce task on the shell (samuel)
     HAMA-73: Add setNumMap/ReduceTasks() to HamaConfiguration (edwardyoon)
